modified:   task_2_14/index.html 	deleted:    task_2_15/Web.Debug.config 	new file:   task_2_16/index.html 	new file:   task_2_16/task.js 	new file:   task_2_17/config.rb 	new file:   task_2_17/index.html 	new file:   task_2_17/sass/index.scss 	new file:   task_2_17/stylesheets/index.css 	new file:   task_2_17/task.js 	new file:   task_2_18/config.rb 	new file:   task_2_18/index.html 	new file:   task_2_18/sass/index.scss 	new file:   task_2_18/stylesheets/index.css 	new file:   task_2_18/task.js 	new file:   task_2_19/index.html 	new file:   task_2_19/sass/index.scss 	new file:   task_2_19/stylesheets/index.css 	new file:   task_2_19/task.js 	new file:   task_2_20/index.html 	new file:   task_2_20/task.js 	new file:   task_2_21/index.html 	new file:   task_2_21/task.js

--- a/task_2_14/index.html
+++ b/task_2_14/index.html
@@ -28,12 +28,6 @@ var aqiData = [
 
 (function () {
 
-    /*
-    在注释下方编写代码
-    遍历读取aqiData中各个城市的数据
-    将空气质量指数大于60的城市显示到aqi-list的列表中
-    */
-
     /**
      * 二叉树节点
      *
@@ -87,7 +81,7 @@ var aqiData = [
     }
 
     /**
-     * 二叉查找树
+     * 二叉查找树(BST)
      *
      * @class
      */
@@ -96,6 +90,7 @@ var aqiData = [
         this.inOrder = inOrder;
         this.insert = insert;
     }
+    var CityRanking = new BST();
 
     /**
      * BST 中序遍历
@@ -108,7 +103,6 @@ var aqiData = [
             inOrder(node.right);
         }
     }
-
 
     /**
      * 从 aqiData 中过滤出指数大于 60 的数组元素
@@ -128,15 +122,11 @@ var aqiData = [
         }
     }
 
-    function compare(a, b) {
-        return a - b;
-    }
-
     /**
      * 将阿拉伯数字转化为汉字大写
      *
      * @param {int} num 待转化的数字
-     * @return {string} 转化的结果
+     * @return {String} 转化的结果
      */
     function convertIntToZh(num) {
         num += "";
@@ -204,14 +194,10 @@ var aqiData = [
     };
 
     swap(aqiData);
-    var CityRanking = new BST();
-
-
     var cityList = aqiData.filter(ifGreaterThan60);
     for (var i = cityList.length - 1; i >= 0; i--) {
         CityRanking.insert(cityList[i]);
     }
-
     inOrder(CityRanking.root);
 
     var list = document.getElementById("aqi-list");
@@ -222,7 +208,6 @@ var aqiData = [
        li.appendChild(txt);
        list.appendChild(li);
     }
-
 }());
 
 </script>
