--- a/task_2_23/index.html
+++ b/task_2_23/index.html
@@ -11,8 +11,11 @@
       line-height: 1.5rem;
       border: black solid 0.2rem;
       border-radius: 1rem;
-      padding: 0.5rem;
-      margin: 0.5rem;
+      padding: 0.3rem;
+      margin: 0.1rem 0.5rem;
+      color: black;
+      background-color: white;
+      transition: color 0.2s, background-color 0.4s;
     }
   </style>
 </head>
