--- a/task_2_23/index.html
+++ b/task_2_23/index.html
@@ -35,6 +35,7 @@
     dog
     <div>banana</div>
     <div>pear</div>
+    <div>pig</div>
     <div>bear</div>
   </div>
   <div>doge
@@ -51,7 +52,7 @@
 <p>Search by BFS</p>
 <label for="search">Input:</label>
 <input type="text" name="search" id="search" />
-<button id="ensure">Search</button>
+<button id="ensure">Search (by BFS)</button>
 <br />
 <br />
 <button id="inOrder">in order</button>
