--- a/task_2_25/index.html
+++ b/task_2_25/index.html
@@ -49,6 +49,7 @@
     </style>
   </head>
   <body>
+    <p>按照自己的想法没发完成, 设计模式选择不好, 先写后面的</p>
     <div id="tree"></div>
     <script src="task.js"></script>
   </body>
