更新任务 2-26 的 index.html, 增加 note.md 的说明

--- a/task_2_26/index.html
+++ b/task_2_26/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <p style="font-size:12px; padding: 0.1rem; margin: 0;">30% 的模拟丢包率也太高了。</p>
+    <p style="font-size:12px; padding: 0.1rem; margin: 0;">30% 的模拟丢包率也太高了, 对于程序的解释在 note.md</p>
     <canvas id="cosmos" width="500" height="500"></canvas>
     <div id="commandPanel">
     </div>
