任务28 更新 index.html 中的说明

--- a/task_2_28/index.html
+++ b/task_2_28/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <p style="font-size:12px; padding: 0.1rem; margin: 0;">实际上飞船绕地球运动并不需要能量呀 >_< 所以哪里有能耗这一说呢？对于程序的解释在 note.md</p>
+    <p style="font-size:12px; padding: 0.1rem; margin: 0;">要注意, 指挥官发出命令, 飞船接收并响应命令, 再把响应的状态回馈给星球, 再发送到 DC, 这中间信号在宇宙中传输了两次, 所以从指挥官发出信号, 到大屏幕上更新状体, 延迟是相当大的</p>
     <canvas id="cosmos" width="500" height="500"></canvas>
     <table>
       <thead>
