--- a/task_2_29/index.html
+++ b/task_2_29/index.html
@@ -23,6 +23,14 @@
       .grayBorder {
         border-color: gray;
       }
+      input {
+        -webkit-appearance: none;
+        border: 1px solid #AAAAAA;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        margin: 0.5rem;
+        box-shadow: 0px 0px 0.5rem #AAAAAA;
+      }
     </style>
   </head>
   <body>
